<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WEight</string>
    <string name="title">食物营养分析助手</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_key">请输入密码</string>
    <string name="user_key_new">请输入新密码</string>
    <string name="user_name">请输入手机号码</string>
    <string name="name">登 \t\t 录</string>
    <string name="skip"><u>跳过登录</u></string>
    <string name="register">新用户注册</string>
    <string name="forget">忘记密码？</string>
    <string name="user_key_again">请确认密码</string>
    <string name="user_key_new_again">请确认新密码</string>
    <string name="user_register">注 \t\t 册</string>
    <string name="user_resetpassword">重\t\t置\t\t密\t\t码</string>
    <string name="user_verifycode">请输入验证码</string>
    <string name="suggestion">今日猪蹄摄入过多，请补充维生素！</string>
    <string name="dateslot_cellsta_title" tools:ignore="ExtraTranslation">起始日期</string>
    <string name="dateslot_cellsta_hint" tools:ignore="ExtraTranslation">选择起始日期</string>
    <string name="dateslot_cellend_title" tools:ignore="ExtraTranslation">结束日期</string>
    <string name="dateslot_cellend_hint" tools:ignore="ExtraTranslation">选择结束日期</string>
    <string name="dateslot_bt_ent" tools:ignore="ExtraTranslation">确认</string>
    <array name="time">
        <item>一周</item>
        <item>一月</item>
        <item>三月</item>
    </array>

</resources>