<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg5"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginRight="5dp">
        <Button
            android:id="@+id/btn_skip"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginTop="0dp"
            android:padding="5dp"
            android:text="@string/skip"
            android:textSize="15sp"
            android:textStyle="italic|bold"
            android:textColor="@color/darkblue"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_1"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/name"
        android:maxEms="10"
        android:maxLines="2"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="200dp"
        />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:gravity="center|center"
        android:background="@drawable/usertext">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="8dp"
            android:src="@drawable/user"/>
        <ImageView
            android:layout_width="12dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:src="@drawable/verticalline"/>
        <EditText
            android:id="@+id/et_1"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:hint="@string/user_name"
            android:textColorHint="@color/black"
            android:maxLines="1"
            android:layout_gravity="center"
            android:padding="5dp"
            android:textColor="@color/black"
            android:inputType="phone"
            android:textSize="16sp"
            android:background="@null"/>
    </LinearLayout>
    <!--输入框-->
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:gravity="center|center"
        android:background="@drawable/usertext">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="8dp"
            android:src="@drawable/passwd"/>
        <ImageView
            android:layout_width="12dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:src="@drawable/verticalline"/>
        <EditText
            android:id="@+id/et_2"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:hint="@string/user_key"
            android:textColorHint="@color/black"
            android:maxLines="1"
            android:padding="5dp"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:background="@null"
            />
        <Button
            android:id="@+id/btn_hide"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:padding="5dp"
            android:gravity="center|left"
            android:background="@drawable/no_eye"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        android:background="@null">
        <Button
            android:id="@+id/btn_reg"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="0dp"
            android:padding="5dp"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="@string/register"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:background="@android:color/transparent"/>
        <Button
            android:id="@+id/forget"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="0dp"
            android:padding="5dp"
            android:layout_weight="1"
            android:gravity="center|right"
            android:text="@string/forget"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        >

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/name"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/whitesmoke"
            android:background="@drawable/login"
            />

    </LinearLayout>
    <!--按钮-->


</LinearLayout>