<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg4"
    >


    <Button
        android:id="@+id/btn_skip"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginLeft="290dp"
        android:layout_marginTop="100dp"
        android:padding="5dp"
        android:text="跳过" />

    <TextView
        android:id="@+id/tv_1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/name"
        android:maxEms="10"
        android:maxLines="2"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="100dp"
        />
    <!--输入框-->
    <EditText
        android:id="@+id/et_1"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_insert"
        android:hint="@string/user_name"
        android:maxLines="1"
        android:layout_gravity="center"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_2"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:hint="@string/user_key"
        android:maxLines="1"
        android:padding="5dp"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_insert"
        />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        >

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="登 录"
            android:textColor="#EAE2E2"
            android:background="@drawable/btn_left"
            />

        <Button
            android:id="@+id/btn_reg"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="注册"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:background="@drawable/btn_right"

            />

    </LinearLayout>
    <!--按钮-->


</LinearLayout>