<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ImageView
        android:id="@+id/profile_photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg5"
        android:scaleType="centerCrop"
        />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="10"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_weight="3.1">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="6.9">
    <TextView
        android:id="@+id/tv_1"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/user_resetpassword"
        android:maxEms="10"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        />
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        android:gravity="center|center"
        android:background="@drawable/usertext">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="8dp"
            android:src="@drawable/user"/>
        <ImageView
            android:layout_width="12dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:src="@drawable/verticalline"/>
        <EditText
            android:id="@+id/et_1"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:hint="@string/user_name"
            android:textColorHint="@color/darkgray"
            android:maxLines="1"
            android:layout_gravity="center"
            android:padding="5dp"
            android:textColor="@color/black"
            android:inputType="phone"
            android:textSize="16sp"
            android:background="@null"/>
    </LinearLayout>
    <!--输入框-->
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="3dp"
        android:orientation="horizontal"
        android:gravity="center|center"
        android:background="@drawable/usertext">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="8dp"
            android:src="@drawable/passwd"/>
        <ImageView
            android:layout_width="12dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:src="@drawable/verticalline"/>
        <EditText
            android:id="@+id/et_2"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:hint="@string/user_key_new"
            android:textColorHint="@color/darkgray"
            android:maxLines="1"
            android:padding="5dp"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:background="@null"
            />
        <Button
            android:id="@+id/btn_hide"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:padding="5dp"
            android:gravity="center|left"
            android:background="@drawable/no_eye"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="3dp"
        android:orientation="horizontal"
        android:gravity="center|center"
        android:background="@drawable/usertext">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="8dp"
            android:src="@drawable/passwd"/>
        <ImageView
            android:layout_width="12dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:src="@drawable/verticalline"/>
        <EditText
            android:id="@+id/et_3"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:hint="@string/user_key_new_again"
            android:textColorHint="@color/darkgray"
            android:maxLines="1"
            android:padding="5dp"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:background="@null"
            />
        <Button
            android:id="@+id/btn_hide2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:padding="5dp"
            android:gravity="center|left"
            android:background="@drawable/no_eye"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="3dp"
        android:orientation="horizontal"
        android:gravity="center|center"
        android:background="@drawable/usertext">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="8dp"
            android:src="@drawable/verifycode"/>
        <ImageView
            android:layout_width="12dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:src="@drawable/verticalline"/>
        <EditText
            android:id="@+id/et_4"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:hint="@string/user_verifycode"
            android:textColorHint="@color/darkgray"
            android:maxLines="1"
            android:padding="5dp"
            android:layout_gravity="center"
            android:inputType="number"
            android:background="@null"
            />
        <Button
            android:id="@+id/get_vercode"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.6"
            android:layout_marginRight="8dp"
            android:text="获取验证码"
            android:textColor="@color/black"
            android:background="@drawable/verify"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        >

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/user_resetpassword"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/whitesmoke"
            android:background="@drawable/selector"
            />

    </LinearLayout>
    <!--按钮-->
    </LinearLayout>
    </LinearLayout>
</FrameLayout>